--- a/src/styles/postCreatorStyle.scss
+++ b/src/styles/postCreatorStyle.scss
@@ -26,7 +26,7 @@
     }
 
     &:focus{
-      outline: 1px solid black;
+      box-shadow: 0px 0px 1px 2px black;
     }
 
     &::placeholder{
